--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -59,7 +59,7 @@ Available plans:
 
    ```
 
-   Or, optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service.
+   Or, optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.*
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -84,48 +84,8 @@ Available plans:
     * The `channel` parameter allows you to distinguish between different account types. When initializing the account, IBM Cloud is the default account used if have saved credentials for an IBM Quantum Platform and an IBM Cloud account.
 
     <Admonition type="caution">
-      Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; click the following collapsible section for more information.
+      Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.
     </Admonition>
-
-    <details>
-      <summary>
-        Securely manage your token with an environment variable
-      </summary>
-      To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. Here’s how to modify your code to load the API token from an environment variable.
-
-      1. Set the environment variable:
-
-      Set the `IQP_API_TOKEN` environment variable in your system. You can do this by adding the following line to your shell profile (for example, `.bashrc`, `.zshrc`) or by setting it directly in your terminal:
-
-      ```bash
-      export IQP_API_TOKEN="<YOUR_IQP_API_TOKEN>"
-      ```
-
-      2. Modify the code to retrieve the token from the environment variable
-
-      Update your code to retrieve the token from the environment variable instead of saving it directly:
-
-      ```python
-      import os
-      from qiskit_ibm_catalog import QiskitFunctionsCatalog
-
-      # Gather the token from your environment
-      iqp_api_token = os.getenv("IQP_API_TOKEN")
-
-      QiskitFunctionsCatalog.save_account(token=iqp_api_token)
-      ``` 
-    </details>
-
-    <Admonition type="note">
-    IBM Cloud is the default account used if you don't specify a different channel or account name.
-    </Admonition>
-
-    <CodeAssistantAdmonition
-      tagLine="If you forget the setup code, try asking Qiskit Code Assistant."
-      prompts={[
-        "# Set up my IBM Runtime account using TOKEN for my token"
-      ]}
-    />
 
 1. Test your setup.  Run a simple circuit using Sampler to ensure that your environment is set up properly:
 
@@ -241,7 +201,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
    service = QiskitRuntimeService(channel="ibm_cloud", token="<IBM Cloud API key>", instance="<IBM Cloud CRN>")
    ```
 
-   You can optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service.
+   You can optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.* 
 
    ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -267,37 +227,8 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
 
     <Admonition type="caution">
-      Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; click the following collapsible section for more information.
+      Account credentials are saved in plain text. To more securely manage your token, it is recommended to use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.
     </Admonition>
-
-  <details>
-    <summary>
-      Securely manage your token with an environment variable
-    </summary>
-    To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. Here’s how to modify your code to load the API token from an environment variable.
-
-    1. Set the environment variable:
-
-    Set the `IQP_API_TOKEN` environment variable in your system. You can do this by adding the following line to your shell profile (for example, `.bashrc`, `.zshrc`) or by setting it directly in your terminal:
-
-    ```bash
-    export IQP_API_TOKEN="<YOUR_IQP_API_TOKEN>"
-    ```
-
-    2. Modify the code to retrieve the token from the environment variable
-
-    Update your code to retrieve the token from the environment variable instead of saving it directly:
-
-    ```python
-    import os
-    from qiskit_ibm_catalog import QiskitFunctionsCatalog
-
-    # Gather the token from your environment
-    iqp_api_token = os.getenv("IQP_API_TOKEN")
-
-    QiskitFunctionsCatalog.save_account(token=iqp_api_token)
-    ``` 
-  </details>
 
 6. Test your setup.  Ensure that you can connect to the service:
 
@@ -306,6 +237,33 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
   service = QiskitRuntimeService()
 ```
+
+<span id="securely-manage"></span>
+## Securely manage your token
+
+To store sensitive information like account credentials more securely, it’s a good practice to use environment variables instead of saving them in plain text. Here’s how to modify your code to load the API token from an environment variable.
+
+1. Set the environment variable.
+
+Set the `IQP_API_TOKEN` environment variable in your system. You can do this by adding the following line to your shell profile (for example, `.bashrc`, `.zshrc`) or by setting it directly in your terminal:
+
+```bash
+export IQP_API_TOKEN="<YOUR_IQP_API_TOKEN>"
+```
+
+2. Modify the code to retrieve the token from the environment variable.
+
+Update your code to retrieve the token from the environment variable instead of saving it directly:
+
+```python
+import os
+from qiskit_ibm_catalog import QiskitFunctionsCatalog
+
+# Gather the token from your environment
+iqp_api_token = os.getenv("IQP_API_TOKEN")
+
+QiskitFunctionsCatalog.save_account(token=iqp_api_token)
+``` 
 
 ## Next steps
 
