--- a/docs/guides/runtime-options-overview.mdx
+++ b/docs/guides/runtime-options-overview.mdx
@@ -53,7 +53,7 @@ Options can be defined before a primitive is constructed and passed to the primi
 <span id="options-table"></span>
 ### Available options
 
-The following table documents options from the latest version of qiskit-ibm-runtime. To see older option versions, visit the [qiskit-ibm-runtime API reference](/api/qiskit-ibm-runtime) and select a historical version.
+The following table documents options from the latest version of `qiskit-ibm-runtime`. To see older option versions, visit the [`qiskit-ibm-runtime` API reference](/api/qiskit-ibm-runtime) and select a historical version.
 
 <Admonition type="caution" title="Important">
 Scroll to see the full table.
