--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -50,16 +50,16 @@ Available plans:
 
 1. Retrieve your IBM Quantum token from the [IBM Quantum account page](https://quantum.ibm.com/account).
 
-1. <span id="save-account"></span>Authenticate to the service by calling `QiskitRuntimeService` with your IBM Quantum API key and CRN:
+1. <span id="save-account"></span>Authenticate to the service by calling `QiskitRuntimeService` with your IBM Quantum API token and CRN. [Set up an environment variable](#securely-manage) rather than copying and pasting your API token into your code.
 
    ```python
    from qiskit_ibm_runtime import QiskitRuntimeService
 
-   service = QiskitRuntimeService(channel="ibm_quantum", token="<MY_IBM_QUANTUM_TOKEN>")
+   service = QiskitRuntimeService(channel="ibm_quantum", token=<your-environment-variable>)
 
    ```
 
-   Or, optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Note that account credentials are saved in plain text. To more securely manage your token, it is recommended that you use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.*
+   Or, optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Note that account credentials are saved in plain text. **Never include your token in a notebook.** Instead, use an environment variable when using `save_account()`; see the [Securely manage your token](#securely-manage) section for more information.*
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -67,7 +67,7 @@ Available plans:
     # Save an IBM Quantum account and set it as your default account.
     QiskitRuntimeService.save_account(
         channel="ibm_quantum",
-        token="<MY_IBM_QUANTUM_TOKEN>",
+        token=<your-environment-variable>,
         set_as_default=True,
         # Use `overwrite=True` if you're updating your token.
         overwrite=True,
@@ -197,15 +197,15 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     1. Find your API key. From the [API keys page](https://cloud.ibm.com/iam/apikeys), view or create your API key, then copy it to a secure location so you can use it for authentication.
     2. Find your Cloud Resource Name (CRN). Open the [Instances page](https://cloud.ibm.com/quantum/instances) and click your instance. In the page that opens, click the icon to copy your CRN. Save it in a secure location so you can use it for authentication.
 
-1. <span id="cloud-save"></span>Authenticate to the service by calling `QiskitRuntimeService` with your saved credentials or with your IBM Cloud API key and CRN:
+1. <span id="cloud-save"></span>Authenticate to the service by calling `QiskitRuntimeService` with your saved credentials or with your IBM Cloud API key and CRN. [Set up an environment variable](#securely-manage) rather than copying and pasting your API token into your code.
 
    ```python
    from qiskit_ibm_runtime import QiskitRuntimeService
 
-   service = QiskitRuntimeService(channel="ibm_cloud", token="<IBM Cloud API key>", instance="<IBM Cloud CRN>")
+   service = QiskitRuntimeService(channel="ibm_cloud", token=<your-environment-variable>, instance="<IBM Cloud CRN>")
    ```
 
-   You can optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Note that account credentials are saved in plain text. To more securely manage your token, it is recommended that you use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.* 
+   You can optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. *Note that account credentials are saved in plain text. **Never include your token in a notebook.** Instead, use an environment variable when using `save_account()`; see the [Securely manage your token](#securely-manage) section for more information.* 
 
    ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -213,7 +213,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     # Save account to disk.
     QiskitRuntimeService.save_account(
         channel="ibm_cloud",
-        token="<IBM Cloud API key>",
+        token=<your-environment-variable>,
         instance="<IBM Cloud CRN>",
         name="<account-name>",
         # Use `overwrite=True` if you're updating your token.
@@ -231,7 +231,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
 
     <Admonition type="caution">
-      Account credentials are saved in plain text. To more securely manage your token, it is recommended that you use an environment variable; see the [Securely manage your token](#securely-manage) section for more information.
+      *Note that account credentials are saved in plain text. **Never include your token in a notebook.** Instead, use an environment variable when using `save_account()`; see the [Securely manage your token](#securely-manage) section for more information.*
     </Admonition>
 
 6. Test your setup.  Ensure that you can connect to the service:
